--- a/index.html
+++ b/index.html
@@ -41,8 +41,14 @@
     border-radius: 5px;
     color: #f7f3f3;
     font-size: 17px;
+    box-shadow:0px 0px 4px rgb(0 0 1);
+    transition:all 0.1s ease-in-out;
+            
     font-weight: bold;
     background-color: black;
+        }
+        button:hover{
+        transform:scale(1.1);
         }
     </style>
 </head>
